<resources>
    <string name="BASE_URL">http://192.168.8.132:8085/</string>

    <string name="app_name">Mini-Project</string>
    <string name="welcome_message">Welcome back!</string>
    <string name="login_title">Logging to your account</string>
    <string name="welcome_message2">Welcome!</string>
    <string name="signup_title">Create your account</string>

    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>

    <string name="forgot_password">Recover Account?</string>
    <string name="login_bottom_text">Don\'t have an account?</string>
    <string name="signup_bottom_text">Already a Member?</string>
    <string name="to_signup">Sign up </string>
    <string name="to_login">Login</string>
    <string name="check_box">Remember me</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="button_next">Next</string>
    <string name="button_continue">Continue</string>
    <string name="button_recover">Recover</string>
    <string name="button_submit">Submit</string>
    <string name="button_delete">Delete Subscription</string>
    <string name="button_Yes">Yes</string>
    <string name="button_No">No</string>
    <string name="button_add_new">Add New</string>

    <string name="signup_toast">Password does not match!</string>
    <string name="empty_field_toast">Required field cannot be empty</string>
    <string name="network_error_toast">Network error!</string>
    <string name="data_save_failed_toast">Data saving Failed!</string>
    <string name="signup_failed_toast">Signup Failed!</string>
    <string name="event_retrieve_failed_toast">Failed to retrieve events</string>
    <string name="login_failed_toast">Login Failed!</string>
    <string name="sub_delete_failed_toast">Subscription deletion failed</string>

    <string name="titleFrom1">Add Recovery Details</string>
    <string name="titleRecover">Recover Account</string>
    <string name="homeTitle">Data Sourcing Events</string>
    <string name="openTitle">Add Following Details</string>
    <string name="subTitle">Subscriptions</string>
    <string name="submittedTitle">Submitted Details</string>

    <string name="full_name">Full Name</string>
    <string name="pet_name">Childhood Pet Name</string>
    <string name="friend_name">Childhood Best Friend Name</string>
    <string name="mother_name">Mothers Maiden Name</string>
    <string name="dob">Date of Birth</string>
    <string name="tob">Time of Birth</string>
    <string name="ownQuestion">My Own Question</string>
    <string name="ownAnswer">My Own Answer</string>
    <string name="inputAnswer">Input Answer</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="sex">Sex</string>
    <string name="height">Height</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="eyeColour">Eye Colour</string>
    <string name="location">Location of Birth</string>
    <string name="eventName">Event Name</string>
    <string name="eventDescription">Event Description</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>

    <string name="unsave_title">Unsaved Data</string>
    <string name="save_data_title">Save Data</string>
    <string name="exit_title">Exit</string>
    <string name="delete_title">Delete Subscription</string>

    <string name="conform_massage_back">Are you sure you want to go back?</string>
    <string name="conform_massage_save">Are the information correct?</string>
    <string name="conform_massage_exit">Are you sure you want exit?</string>
    <string name="conform_massage_delete">Are you sure you want delete subscription?</string>


</resources>