<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.OpenActivity">

    <TextView
        android:id="@+id/textView5"
        style="@style/Titles"
        android:layout_marginTop="60dp"
        android:text="@string/openTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dobOpen"
        style="@style/InputField"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="412dp"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/dob"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tobOpen"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/tob"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobOpen" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bloodGroupOpen"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/bloodGroup"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationOpen" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/sexOpen"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/sex"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloodGroupOpen" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/heightOpen"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/height"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexOpen" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ethnicityOpen"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/ethnicity"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightOpen" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/eyeColorOpen"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/eyeColour"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ethnicityOpen" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/locationOpen"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/location"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tobOpen" />

    <Button
        android:id="@+id/submitOpen"
        style="@style/RoundedButton"
        android:layout_marginBottom="100dp"
        android:text="@string/button_submit"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="80dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>