<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RecoverFormActivity">

    <TextView
        android:id="@+id/textView5"
        style="@style/Titles"
        android:layout_marginTop="60dp"
        android:text="@string/titleFrom1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fname"
        style="@style/InputField"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="412dp"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/full_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dob"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fname" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mothersName"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/mother_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/friendName"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/friend_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mothersName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/petName"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/pet_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendName" />

    <Button
        android:id="@+id/nextBtn1"
        style="@style/RoundedButton"
        android:layout_marginBottom="100dp"
        android:text="@string/button_next"
        android:textSize="20dp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider10"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider12"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="80dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>