<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoverFormActivity2">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ownQuestion"
        style="@style/InputField"
        android:layout_marginBottom="412dp"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/ownQuestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.342" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ownAnswer"
        style="@style/InputField"
        android:background="@drawable/rounded_input_background"
        android:hint="@string/ownAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ownQuestion" />

    <Button
        android:id="@+id/continueBtn"
        style="@style/RoundedButton"
        android:text="@string/button_continue"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Titles"
        android:text="@string/titleFrom1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

</androidx.constraintlayout.widget.ConstraintLayout>