<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SubscribedActivity">

    <TextView
        android:id="@+id/eyeColorText"
        style="@style/InputFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/eyeColorSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/heightText"
        style="@style/InputFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ethnicityText"
        style="@style/InputFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/ethnicitySub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sexText"
        style="@style/InputFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/sexSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bloodText"
        style="@style/InputFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/bloodGroupSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/submittedTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/deleteSub"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#BA2F03"
        android:text="@string/button_delete"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider7"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="80dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="main,dobSub,tobSub,bloodGroupSub,sexSub,heightSub,ethnicitySub,eyeColorSub" />

    <TextView
        android:id="@+id/dobSub"
        style="@style/textEdit"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="412dp"
        android:text="@string/dob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tobSub"
        style="@style/textEdit"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobSub" />

    <TextView
        android:id="@+id/bloodGroupSub"
        style="@style/textEdit"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/bloodGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tobSub" />

    <TextView
        android:id="@+id/sexSub"
        style="@style/textEdit"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bloodGroupSub" />

    <TextView
        android:id="@+id/heightSub"
        style="@style/textEdit"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexSub" />

    <TextView
        android:id="@+id/ethnicitySub"
        style="@style/textEdit"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/ethnicity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightSub" />

    <TextView
        android:id="@+id/eyeColorSub"
        style="@style/textEdit"
        android:layout_width="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/eyeColour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ethnicitySub" />

    <TextView
        android:id="@+id/dobText"
        style="@style/InputFieldText"
        android:layout_width="wrap_content"
        android:layout_marginStart="160dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/dobSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tobText"
        style="@style/InputFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/tobSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>